--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sanitize.css": "5.0.0",
+    "styled-components": "3.2.6"
   },
   "devDependencies": {
     "eslint": "4.19.1",
