--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.8.2",
-    "prettier": "1.12.1"
+    "jest-styled-components": "5.0.1",
+    "prettier": "1.12.1",
+    "react-test-renderer": "16.3.2"
   },
   "repository": {
     "type": "git",
