--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "7.8.2",
     "jest-styled-components": "5.0.1",
     "prettier": "1.12.1",
+    "prop-types": "15.6.1",
     "react-test-renderer": "16.3.2"
   },
   "repository": {
