--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
+    "lodash.debounce": "4.0.8",
     "polished": "1.9.2",
     "ramda": "0.25.0",
     "react": "16.3.2",
