--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.8.2",
     "jest-styled-components": "5.0.1",
+    "mockdate": "2.0.2",
     "prettier": "1.12.1",
     "prop-types": "15.6.1",
     "react-test-renderer": "16.3.2"
