--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "7.8.2",
     "jest-styled-components": "5.0.1",
     "mockdate": "2.0.2",
+    "moment-timezone": "0.5.17",
     "prettier": "1.12.1",
     "prop-types": "15.6.1",
     "react-test-renderer": "16.3.2"
