--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
   - 8
+install:
+  -npm install -g codecov
 script:
-  - npm test
   - npm run lint
   - npm run format:check
+  - npm test:coverage
+  - codecov
 cache:
   directories:
     - "node_modules"
