--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
 script:
   - npm run lint
   - npm run format:check
-  - npm test:coverage
+  - npm run test:coverage
   - codecov
 cache:
   directories:
