--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:coverage": "npm test -- --coverage",
     "lint": "eslint \"src/**/*.js\"",
     "format": "prettier --write \"src/**/*.js\"",
-    "format:check": "prettier --list-different \"src/**/*.js\""
+    "format:check": "prettier --list-different \"src/**/*.js\"",
+    "deploy": "surge ./build --domain https://theforecast.surge.sh"
   },
   "dependencies": {
     "lodash.debounce": "4.0.8",
@@ -33,7 +34,8 @@
     "moment-timezone": "0.5.17",
     "prettier": "1.12.1",
     "prop-types": "15.6.1",
-    "react-test-renderer": "16.3.2"
+    "react-test-renderer": "16.3.2",
+    "surge": "0.20.1"
   },
   "repository": {
     "type": "git",
